[package]
name = "sentri-solana-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Procedural macros for Sentri Solana code generation and security constraint injection."

keywords = ["sentri", "solana", "security", "smart-contracts", "macros"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-solana-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
